# ModernCppUnit

./: CMakeLists.txt  README.md
c2/: CMakeLists.txt  Soundex.h  SoundexTest.cpp  main.cpp
demo/: CMakeLists.txt
demo/scripts/: build.sh
demo/tests/: CMakeLists.txt
my_project/: CMakeLists.txt
scripts/: build.sh  clean.sh
